chore: enable native access for JavaExec tasks